[package]
name = "man_down"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
diesel = { version = "2.1.1", features = ["sqlite"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
futures = "0.3.28"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
rusqlite = "0.29"
serde = "1.0.130"
serde_derive = "1.0.130"
teloxide = { version = "0.12", features = ["auto-send", "macros"] }
tokio = { version = "1.8.3", features = ["full"] }
url = "2.2"
