[package]
name = "man_down"
version = "2.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = "0.4"
dotenvy = "0.15"
log = "0.4"
futures = "0.3.28"
mongodb = "3.2.3"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde = "1.0.130"
serde_derive = "1.0.130"
serde_yaml = "0.9"
teloxide = { version = "0.12", features = ["auto-send", "macros"] }
tokio = { version = "1.8.3", features = ["full"] }
url = "2.2"
